# clipboard-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  release.md
.github/workflows/: release.yml
docs/: CHAY-DU-AN.md
scripts/: build-release-nsis.ps1  create-latest-json.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
