[package]
name = "clipboard-manager"
version = "0.1.4"
description = "A compact Windows clipboard history manager built with Tauri."
authors = ["ngthanhvu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipboard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_DataExchange"] }

[profile.release]
opt-level = "s"   # tối ưu kích thước thay vì tốc độ tối đa
lto = true        # link-time optimization: binary nhỏ & gọn hơn
codegen-units = 1 # tối ưu kỹ hơn (build lâu hơn một chút)
strip = true      # bỏ debug symbols khỏi binary
